--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
 
 <p>
 	<!-- All of the Node.js APIs are available in this renderer process. -->
-	We are using Node.js
-	<script>document.write(process.versions.node)</script>
-	,
-	Chromium
-	<script>document.write(process.versions.chrome)</script>
-	,
-	and Electron
-	<script>document.write(process.versions.electron)</script>
-	.
+	We are using Node.js<script>document.write(process.versions.node)</script>
+	, Chromium <script>document.write(process.versions.chrome)</script>
+	, and Electron <script>document.write(process.versions.electron)</script>.
 </p>
 
 <script>
