--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns:v-on="http://www.w3.org/1999/xhtml" lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Hello World!</title>
+	<title>Z-ToolBox</title>
 
 	<script>
 		// You can also require other files to run in this process
