use monokai in codemirror

--- a/browserViews/index.html
+++ b/browserViews/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' 'unsafe-eval'; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'">
 
 	<link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
+	<link rel="stylesheet" href="lib/codemirror/theme/monokai.css">
 	<script src="lib/codemirror/lib/codemirror.js"></script>
 	<script src="lib/codemirror/mode/htmlmixed/htmlmixed.js"></script>
 	<script src="lib/codemirror/mode/javascript/javascript.js"></script>
