--- a/browserViews/iframe.html
+++ b/browserViews/iframe.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>iframe</title>
+	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://unpkg.com/; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'">
+
 	<script src="js/iframe.js"></script>
 </head>
 <body>
